Change response type and fix docker-compose (#53)
* Change response type for controller update method

* Fix docker-compose file
